Add changelog description

--- a/changelog/config.yaml
+++ b/changelog/config.yaml
@@ -1,3 +1,6 @@
 id: tenzir
 name: Tenzir Node
+description: >-
+  The security data pipeline engine that collects security telemetry, normalizes
+  events to OCSF, and offers an open data lake for storage.
 repository: tenzir/tenzir
