--- a/changelog/releases/v5.13.1/manifest.yaml
+++ b/changelog/releases/v5.13.1/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-08-28
 title: "Azure Blob Storage & Stability Improvements"
-intro: |
+intro: >-
   This release adds a new Azure Blob Storage operator with account key authentication and improves Google Security Operations retry handling. It also contains various small fixes and improvements.
