--- a/changelog/releases/v5.7.0/manifest.yaml
+++ b/changelog/releases/v5.7.0/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-07-01
 title: "Secret Secrets"
-intro: |
+intro: >-
   Tenzir Node v5.7.0 introduces a new secret type that keeps its sensitive content hidden while enabling flexible secret retrieval. This release also adds support for OCSF extensions and brings several improvements to the  operator.
