--- a/changelog/releases/v5.20.2/manifest.yaml
+++ b/changelog/releases/v5.20.2/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-11-25
 title: "Backport Release"
-intro: |
+intro: >-
   This release backports the changes made in v5.21.1 to v5.20.1.
