--- a/changelog/releases/v5.21.1/manifest.yaml
+++ b/changelog/releases/v5.21.1/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-11-24
 title: "New Hash Functions"
-intro: |
+intro: >-
   This release features new and improved hash functions as well as a couple of bugfixes.
