--- a/changelog/releases/v5.21.2/manifest.yaml
+++ b/changelog/releases/v5.21.2/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-11-28
 title: "Operator Fixups"
-intro: |
+intro: >-
   This is a bugfix release that fixes timestamp handling in the python operator and the backpressure handling in publish and subscribe.
