--- a/changelog/releases/v5.3.2/manifest.yaml
+++ b/changelog/releases/v5.3.2/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-06-03
 title: "Fix Python Operator"
-intro: |
+intro: >-
   Tenzir Node v5.3.1 updated the pyproject version but did not actually commit it, causing the Python operator to fail to start. This release fixes the issue.
