--- a/changelog/releases/v5.3.3/manifest.yaml
+++ b/changelog/releases/v5.3.3/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-06-06
 title: "HTTP fixes"
-intro: |
+intro: >-
   The from_http and http operators now support response sizes upto 2GiB
