--- a/changelog/releases/v5.3.4/manifest.yaml
+++ b/changelog/releases/v5.3.4/manifest.yaml
@@ -1,4 +1,4 @@
 created: 2025-06-10
 title: "Fix Demo Node Packages"
-intro: |
+intro: >-
   This release fixes a bug that caused package installation outside of the Tenzir Library to fail, which caused Demo Nodes in the Tenzir Platform to not have any packages installed.
