Run Docker image tests after upload, before pushing manifest
Add a test job to the Docker CI workflow that runs smoke tests after
images are uploaded to the registry but before the multi-arch manifest
is pushed. This ensures images are validated before being made available
with the final tags.

The test job:
- Runs for both amd64 and arm64 architectures
- Uses QEMU for arm64 emulation on x86_64 runners
- Verifies the image starts correctly with 'tenzir version'
- Checks that plugins are loaded with 'show plugins'

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -143,11 +143,45 @@ jobs:
             done
           done
 
+  test:
+    name: Test (${{ matrix.test.tag }})
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    strategy:
+      fail-fast: false
+      matrix:
+        test:
+          - arch: linux/amd64
+            tag: amd64
+          - arch: linux/arm64
+            tag: arm64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Run smoke tests
+        run: |
+          for tag in ${{ join(fromJSON(inputs.config).tags, ' ') }}; do
+            image="ghcr.io/tenzir/tenzir:${{ matrix.test.tag }}-${tag}"
+            echo "::notice Testing image ${image}"
+            docker run --rm --platform '${{ matrix.test.arch }}' "${image}" version
+            docker run --rm --platform '${{ matrix.test.arch }}' "${image}" 'show plugins'
+            break  # Only test the first tag, they're all the same image
+          done
+
   push-manifest:
     name: Push Manifest
     runs-on: ubuntu-latest
     needs:
-      - build
+      - test
     steps:
       - name: Checkout
         uses: actions/checkout@v4
