Fix handling of backticks in release workflow intro
Signed-off-by: Jannis Christopher Köhl <mail@koehl.dev>

--- a/.github/workflows/release-major.yaml
+++ b/.github/workflows/release-major.yaml
@@ -3,13 +3,13 @@ name: Release (Major)
 on:
   workflow_dispatch:
     inputs:
-      description:
+      intro:
         description: |
-          Description of the release
+          Intro of the release
 
-          The description of the release should be 1-2 sentences long, must be
-          written in active voice, and should clearly communicate the theme of
-          the release to the user. Use full sentences and avoid abbreviations.
+          The intro should be 1-2 sentences long, must be written in active
+          voice, and should clearly communicate the theme of the release to the
+          user. Use full sentences and avoid abbreviations.
         required: true
         type: string
 
@@ -18,5 +18,5 @@ jobs:
     uses: ./.github/workflows/release.yaml
     with:
       bump: major
-      description: ${{ inputs.description }}
+      intro: ${{ inputs.intro }}
     secrets: inherit
