Fix CMake search path for close-source plugins
The search did not start in the projects root directory, which made the
searched-for path incorrect.

--- a/tenzir/CMakeLists.txt
+++ b/tenzir/CMakeLists.txt
@@ -130,7 +130,7 @@ endif ()
 # to avoid complexity and potential circular reference issues
 
 set(plugins_default "plugins/*")
-if (EXISTS contrib/tenzir-plugins/.git)
+if (EXISTS ${PROJECT_SOURCE_DIR}/contrib/tenzir-plugins/.git)
   list(APPEND plugins_default "contrib/tenzir-plugins/*")
 endif ()
 
