Sync folly to Jannis' development version

--- a/libtenzir/CMakeLists.txt
+++ b/libtenzir/CMakeLists.txt
@@ -136,6 +136,7 @@ endif()
 # -- folly ---------------------------------------------------------------------
 
 find_package(folly REQUIRED)
+find_package(glog REQUIRED)
 
 # -- reproc --------------------------------------------------------------------
 
