Link tenzir binary against Folly::folly
The tenzir.cpp file includes <folly/Init.h> and uses folly::Init{}, so it
needs direct access to folly's include directories. While libtenzir links
against Folly::folly as PUBLIC, we add it explicitly to ensure the include
paths are available for tenzir.cpp compilation.

--- a/tenzir/CMakeLists.txt
+++ b/tenzir/CMakeLists.txt
@@ -18,7 +18,8 @@ if (TENZIR_ENABLE_STATIC_EXECUTABLE AND NOT "${TENZIR_ALLOCATOR}" STREQUAL "none
 endif ()
 
 TenzirTargetEnableTooling(tenzir)
-target_link_libraries(tenzir PRIVATE tenzir::internal tenzir::libtenzir)
+target_link_libraries(tenzir PRIVATE tenzir::internal tenzir::libtenzir
+                                     Folly::folly)
 TenzirTargetLinkWholeArchive(tenzir PRIVATE tenzir::libtenzir_builtins)
 add_executable(tenzir::tenzir ALIAS tenzir)
 
