--- a/.gitmodules
+++ b/.gitmodules
@@ -17,8 +17,9 @@
 	shallow = true
 [submodule "libtenzir/aux/caf"]
 	path = libtenzir/aux/caf
-	url = https://github.com/tenzir/actor-framework
+	url = https://github.com/actor-framework/actor-framework
 	shallow = true
+	branch = main
 [submodule "libtenzir/aux/pfs"]
 	path = libtenzir/aux/pfs
 	url = https://github.com/tenzir/pfs.git
